--- a/01.Apache.Spark.Project-1.RecommenderSystems.FINAL/recommender.ipynb
+++ b/01.Apache.Spark.Project-1.RecommenderSystems.FINAL/recommender.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# Music Recommender System using Apache Spark and Python\n",
     "**Estimated time: 8hrs**\n",
@@ -37,9 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -78,9 +80,34 @@
     "    split = str_in.split(\" \")\n",
     "    return (int(split[0]), int(split[1]), int(split[2]))\n",
     "\n",
-    "artistData = sc.textFile(\"./artist_data_small.txt\").map(split_artist)\n",
-    "artistAlias = sc.textFile(\"./artist_alias_small.txt\").map(split_artist_alias)\n",
-    "userArtistData = sc.textFile(\"./user_artist_data_small.txt\").map(split_user_artist_data)"
+    "def first(iterable, default=None, key=None):\n",
+    "    if key is None:\n",
+    "        for el in iterable:\n",
+    "            if el:\n",
+    "                return el\n",
+    "    else:\n",
+    "        for el in iterable:\n",
+    "            if key(el):\n",
+    "                return el\n",
+    "    return default\n",
+    "\n",
+    "def combine_user_data_join(user_data, alias_map):\n",
+    "    if user_data[1] in alias_map:\n",
+    "        return (user_data[0], alias_map[user_data[1]], user_data[2])\n",
+    "    else:\n",
+    "        return user_data\n",
+    "\n",
+    "artistData = sc.textFile(\"./artist_data_small.txt\")\\\n",
+    "    .map(split_artist)\n",
+    "    \n",
+    "artistAlias = sc.textFile(\"./artist_alias_small.txt\")\\\n",
+    "    .map(split_artist_alias)\\\n",
+    "    .collectAsMap()\n",
+    "    \n",
+    "userArtistData = sc.textFile(\"./user_artist_data_small.txt\")\\\n",
+    "    .map(split_user_artist_data)\\\n",
+    "    .map(lambda x: combine_user_data_join(x, artistAlias))\n",
+    "    "
    ]
   },
   {
@@ -99,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -126,8 +153,8 @@
     "    .map(lambda x: aggregate_user(x[0],x[1])) \\\n",
     "    .sortBy(lambda x: x[1], ascending=False) \\\n",
     "    .take(3)\n",
-    "    \n",
-    "user_total_str = \"User {} has a total play count of {} and a mean play count of {}\"\n",
+    "\n",
+    "user_total_str = \"User {} has a total play count of {} and a mean play count of {}.\"\n",
     "    \n",
     "for user in topPlayCounts:\n",
     "    print( user_total_str.format(user[0], user[1], int(user[2])))"
@@ -159,12 +186,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1059637, 1000049, 1), (1059637, 1000056, 1), (1059637, 1000113, 5)]\n",
+      "[(1059637, 1000010, 238), (1059637, 1000062, 11), (1059637, 1000112, 423)]\n",
+      "[(1059637, 1000094, 1), (1059637, 1000130, 19129), (1059637, 1000139, 4)]\n",
+      "19900\n",
+      "19689\n",
+      "9892\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainData, validationData, testData = sc.parallelize(userArtistData.collect())\\\n",
+    "    .randomSplit([0.4,0.4,0.2], 13)\n",
+    "trainData.cache()\n",
+    "validationData.cache()\n",
+    "testData.cache()\n",
+    "    \n",
+    "print( trainData.take(3) )\n",
+    "print( validationData.take(3))\n",
+    "print( testData.take(3) )\n",
+    "print( trainData.count())\n",
+    "print( validationData.count())\n",
+    "print( testData.count())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,12 +242,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#allArtists = all the artists in the entire dataset\n",
+    "#Iterate through the users and for each user\n",
+    "#nonTrainArtists = allArtists - the artists that were in the training set for the current user\n",
+    "#trueArtists = the artists in the dataset passed to modeleval for the current user\n",
+    "#X = len(trueArtists)\n",
+    "#use the model to predict all the ratings on nonTrainArtists\n",
+    "#predictResult = top X sorted by highest rating from the prediction\n",
+    "#Compare predictResult to trueArtists.\n",
+    "users = set(userArtistData.map(lambda s: s[0]).collect())\n",
+    "    \n",
+    "allArtists = set(userArtistData.map(lambda x: x[1]).collect())\n",
+    "\n",
+    "artistsInTrainByUser = trainData.map(lambda x: (x[0], x[1]))\\\n",
+    "    .groupByKey()\\\n",
+    "    .mapValues(lambda x: list(x))\\\n",
+    "    .collectAsMap()\n",
+    "\n",
+    "def evalUser(user, model, testData, trainDataArtists):\n",
+    "    nonTrainArtists = sc.parallelize(allArtists)\\\n",
+    "        .filter(lambda x: x not in trainDataArtists[user])\\\n",
+    "        .map(lambda x: (user, x))\n",
+    "\n",
+    "    trueArtists = set(testData\\\n",
+    "        .filter(lambda x: x[0] == user)\\\n",
+    "        .map(lambda x: x[1])\\\n",
+    "        .collect())\n",
+    "\n",
+    "    xVar = len(trueArtists)\n",
+    "\n",
+    "    predictionResult = model.predictAll(nonTrainArtists)\\\n",
+    "        .sortBy(lambda x: x[2], ascending=False)\\\n",
+    "        .take(xVar)\n",
+    "\n",
+    "    correct = sc.parallelize(predictionResult)\\\n",
+    "        .filter(lambda x: x[1] in trueArtists)\\\n",
+    "        .count()\n",
+    "\n",
+    "    return float(correct)/xVar\n",
+    "\n",
+    "def modelEval(model, testData):\n",
+    "    results = []\n",
+    "    \n",
+    "    for user in users:\n",
+    "        results.append(evalUser(user,model,testData, artistsInTrainByUser))\n",
+    "        \n",
+    "    return sc.parallelize(results).mean()\n",
+    "    \n",
+    "#model = ALS.trainImplicit(validationData, rank = 2, seed=345)\n",
+    "#print(modelEval(model, userArtistData))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,12 +319,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model score for rank 2 is 0.094206\n",
+      "The model score for rank 10 is 0.099203\n",
+      "The model score for rank 20 is 0.086288\n"
+     ]
+    }
+   ],
+   "source": [
+    "rank = [2,10,20]\n",
+    "\n",
+    "for r in rank:\n",
+    "    model = ALS.trainImplicit(trainData, rank = r, seed=345)\n",
+    "    modelScoreString = \"The model score for rank {0} is {1:.5g}\"\n",
+    "    print(modelScoreString.format(r, modelEval(model, validationData)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,11 +352,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06336715899794983"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bestModel = ALS.trainImplicit(trainData, rank=10, seed=345)\n",
     "modelEval(bestModel, testData)"
@@ -259,31 +390,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artist 0: Taking Back Sunday\n",
+      "Artist 1: Brand New\n",
+      "Artist 2: Jimmy Eat World\n",
+      "Artist 3: Elliott Smith\n",
+      "Artist 4: Something Corporate\n"
+     ]
+    }
+   ],
+   "source": [
+    "artistMap = artistData.collectAsMap()\n",
+    "\n",
+    "topArtists = bestModel.recommendProducts(1059637, 5)\n",
+    "artistPrint = \"Artist {}: {}\"\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "for artist in topArtists:\n",
+    "    print(artistPrint.format(i, artistMap[artist[1]]))\n",
+    "    i += 1\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
